tests/NormalTests/paczka1/fuzzy1/98557181.err
Error in line 12: prKg A107 3,78
Error in line 5: prKg S812 95,7
Error in line 11: 2pd S581 97,5
Error in line 28: S581 S581 86,8
